FIX: Terms expand/collapse 100%

--- a/src/Components/About-Page-Layout/Terms/index.module.css
+++ b/src/Components/About-Page-Layout/Terms/index.module.css
@@ -69,4 +69,8 @@
   .termsContainer header h2:last-child {
     font-size: 22px;
   }
+
+  .termsAccordion .customAccordionSection aside {
+    bottom: auto;
+  }
 }
